test/libsolidity/syntaxTests/constructor/constructor_no_visibility_050.sol
pragma experimental "v0.5.0";
contract A { constructor() {} }
// ----
// SyntaxError: (43-59): No visibility specified.
